--- a/src/blocks/radio-buttons/radio-buttons.pug
+++ b/src/blocks/radio-buttons/radio-buttons.pug
@@ -3,9 +3,9 @@ mixin radio-buttons({title})
     .radio-buttons__inputs
       label.radio-buttons__label
         input(type="radio" name="radio").radio-buttons__input
-        span.radio-buttons__checkmark
+        span.radio-buttons__checkmark(tabindex='0')
         span.radio-buttons__text Мужчина
       label.radio-buttons__label
         input(type="radio" name="radio").radio-buttons__input
-        span.radio-buttons__checkmark
+        span.radio-buttons__checkmark(tabindex='0')
         span.radio-buttons__text Женщина
