--- a/src/blocks/rich-list/rich-list.pug
+++ b/src/blocks/rich-list/rich-list.pug
@@ -5,7 +5,7 @@ mixin rich-list({title})
       li.rich-list__li
         label.rich-list__item
           input(type="checkbox").rich-list__checkbox
-          span.rich-list__custom-checkbox 
+          span.rich-list__custom-checkbox(tabindex='0') 
           span.rich-list__text 
             span.rich-list__head Широкий коридор
             br
@@ -15,7 +15,7 @@ mixin rich-list({title})
       li.rich-list__li
         label.rich-list__item
           input(type="checkbox").rich-list__checkbox
-          span.rich-list__custom-checkbox 
+          span.rich-list__custom-checkbox(tabindex='0') 
           div.rich-list__text 
             span.rich-list__head Помощник для инвалидов
             br
