--- a/src/blocks/toggle-buttons/toggle-buttons.pug
+++ b/src/blocks/toggle-buttons/toggle-buttons.pug
@@ -3,5 +3,5 @@ mixin toggle-buttons()
     .toggle-buttons__container
       label.toggle-buttons__label 
         input.toggle-buttons__checkbox(type="checkbox")
-        span.toggle-buttons__checkmark
+        span.toggle-buttons__checkmark(tabindex='0')
         span.toggle-buttons__subtitle Получать спецпредложения 
