--- a/src/blocks/card-book/card-book.scss
+++ b/src/blocks/card-book/card-book.scss
@@ -1,14 +1,15 @@
 .card-book {
   background-color: $white;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  max-width: 380px;
+  border: rem(1) solid rgba(0, 0, 0, 0.12);
+  box-shadow: 0 0 rem(25) rgba(0, 0, 0, 0.2);
+  border-radius: rem(4);
+  width: 100%;
+  max-width: rem(380);
   @media (min-width: $phoneWidth) {
-    min-width: 380px;
+    min-width: rem(380);
   }
   @media (max-width: $phoneWidth) {
-    max-width: 320px;
+    max-width: rem(380);
   }
   &__content {
     padding: rem(40) rem(30) rem(30);
@@ -63,7 +64,7 @@
   }
   &_calc-option {
     display: inline-block;
-    max-width: 215px;
+    max-width: rem(215);
   }
   &__calc-info {
     margin-left: rem(5);
@@ -73,7 +74,7 @@
     max-width: rem(20);
     max-height: rem(20);
     min-width: rem(20);
-    border: 1px solid $ds25;
+    border: rem(1) solid $ds25;
     border-radius: 50%;
     color: $ds25;
   }
@@ -88,7 +89,7 @@
     display: block;
     width: 100%;
     max-width: 70%;
-    border-bottom: 1px dotted $ds50;
+    border-bottom: rem(1) dotted $ds50;
     margin-left: rem(5);
     margin-right: rem(5);
   }
