--- a/src/blocks/card-selection/card-selection.scss
+++ b/src/blocks/card-selection/card-selection.scss
@@ -1,9 +1,10 @@
 .card-selection {
   background-color: $white;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  max-width: 380px;
+  box-shadow: 0 0 rem(25) rgba(0, 0, 0, 0.2);
+  border-radius: rem(4);
+  border: rem(1) solid rgba(0, 0, 0, 0.12);
+  max-width: rem(380);
+  width: 100%;
   @media (max-width: $phoneWidth) {
     max-width: 100%;
     margin: 0 auto;
@@ -11,7 +12,7 @@
   &__content {
     padding: rem(40) rem(30) rem(30);
     @media (max-width: $phoneWidth) {
-      max-width: 320px;
+      max-width: rem(320);
     }
   }
   &__title {
