--- a/src/blocks/card-singin/card-singin.scss
+++ b/src/blocks/card-singin/card-singin.scss
@@ -1,12 +1,12 @@
 .card-singin {
   background-color: $white;
-  max-width: 380px;
-  min-width: 380px;
-  border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  max-width: rem(380);
+  min-width: rem(380);
+  border-radius: rem(4);
+  border: rem(1) solid rgba(0, 0, 0, 0.12);
+  box-shadow: 0 0 rem(25) rgba(0, 0, 0, 0.2);
   @media (max-width: $phoneWidth) {
-    min-width: 300px;
+    min-width: rem(300);
   }
   &__content {
     padding: rem(40) rem(30) rem(30) rem(30);
