--- a/src/blocks/checkbox-buttons/checkbox-buttons.scss
+++ b/src/blocks/checkbox-buttons/checkbox-buttons.scss
@@ -1,16 +1,8 @@
 .checkbox-buttons {
   display: block;
-  max-width: 222px;
+  max-width: rem(222);
   user-select: none;
   cursor: pointer;
-
-  &__title {
-    display: inline-block;
-    text-transform: uppercase;
-    font-family: 'MontserratBold', Arial, sans-serif;
-    font-size: rem(12);
-    position: relative;
-  }
   &__item {
     margin-bottom: rem(10);
     display: flex;
@@ -20,13 +12,16 @@
   }
   &__custom-checkbox {
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    min-width: 20px;
-    min-height: 20px;
+    width: rem(20);
+    height: rem(20);
+    min-width: rem(20);
+    min-height: rem(20);
     border: $border;
-    border-radius: 4px;
+    border-radius: rem(4);
     margin-right: rem(10);
+    &:focus {
+      border: $borderHover;
+    }
   }
   &__text {
     font-size: rem(14);
@@ -34,7 +29,7 @@
     white-space: pre-wrap;
     line-height: rem(18);
   }
-  input {
+  &__checkbox {
     display: none;
   }
   input:checked + span {
