--- a/src/blocks/circle-diagram/circle-diagram.scss
+++ b/src/blocks/circle-diagram/circle-diagram.scss
@@ -1,8 +1,3 @@
-// #CircleDiagram {
-//   width: rem(120);
-//   height: rem(120);
-// }
-
 .circle-diagram {
   display: flex;
   align-items: flex-end;
@@ -10,18 +5,19 @@
     display: block;
   }
   &__container {
-    width: 135px;
-    height: 135px;
+    width: rem(135);
+    height: rem(135);
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &__voices {
     position: absolute;
     white-space: pre-wrap;
     text-align: center;
-    left: calc(50% - 39px);
-    top: calc(50% - 17.5px);
-    max-width: 70px;
-    max-height: 35px;
+    max-width: rem(70);
+    max-height: rem(35);
     font-size: rem(16);
     line-height: rem(15);
     color: $purple;
@@ -34,7 +30,7 @@
   }
   &__list {
     display: block;
-    max-width: 180px;
+    max-width: rem(180);
     margin-left: rem(20);
     font-size: rem(14);
     line-height: rem(24);
@@ -67,10 +63,10 @@
     &:before {
       content: '';
       display: block;
-      max-width: 10px;
-      min-width: 10px;
-      min-height: 10px;
-      max-height: 10px;
+      max-width: rem(10);
+      min-width: rem(10);
+      min-height: rem(10);
+      max-height: rem(10);
       border-radius: 50%;
       margin-right: rem(5);
       margin-top: rem(5);
