--- a/src/blocks/date-dropdown/date-dropdown.scss
+++ b/src/blocks/date-dropdown/date-dropdown.scss
@@ -1,16 +1,12 @@
 .date-dropdown {
   $self: &;
-  max-width: 320px;
+  width: 100%;
+  max-width: rem(320);
   user-select: none;
   display: flex;
   justify-content: space-between;
   @media (max-width: $phoneWidth) {
     max-width: 100%;
-  }
-  &__title {
-    text-transform: uppercase;
-    font-size: rem(12);
-    font-family: 'MontserratBold', sans-serif;
   }
   &__label {
     position: relative;
@@ -19,6 +15,11 @@
     &:last-child {
       #{$self}__input {
         margin-right: 0;
+      }
+    }
+    @media (max-width: $tableWidth) {
+      &:first-child {
+        margin-right: rem(10);
       }
     }
   }
@@ -30,12 +31,10 @@
     font-size: rem(14);
     border: $border;
     border-radius: rem(4);
-    padding: 12px 15px;
+    padding: rem(12) rem(15);
     transition: $trFast;
-    max-width: 150px;
-    @media (max-width: $phoneWidth) {
-      max-width: 125px;
-    }
+    width: 100%;
+    max-width: rem(150);
     &:first-child {
       margin-right: rem(20);
     }
@@ -47,12 +46,12 @@
     }
   }
   &__arrow {
-    max-width: 12px;
-    min-width: 12px;
-    max-height: 12px;
+    max-width: rem(12);
+    min-width: rem(12);
+    max-height: rem(12);
     position: absolute;
-    right: 15px;
-    top: calc(50% + 4px);
+    right: rem(15);
+    top: calc(50% + 0.222rem);
     fill: $ds50;
   }
 }
