--- a/src/blocks/expand-list/expand-list.scss
+++ b/src/blocks/expand-list/expand-list.scss
@@ -1,30 +1,29 @@
 .expand-list {
   display: block;
-  max-width: 266px;
+  max-width: rem(266);
   user-select: none;
   cursor: pointer;
   $self: &;
   &__title {
-    display: block;
+    display: flex;
     font-size: rem(12);
-    position: relative;
-    &:before {
+    justify-content: space-between;
+    align-items: center;
+    &:after {
       content: '';
       display: block;
-      width: 8px;
-      height: 8px;
-      border: 2px solid $ds50;
+      width: rem(8);
+      height: rem(8);
+      border: rem(2) solid $ds50;
       border-top: none;
       border-left: none;
       transform: rotate(45deg);
-      position: absolute;
-      right: 6%;
-      top: calc(50% - 5px);
       transition: $trFast;
+      margin-right: rem(20);
     }
     &_active {
       margin-bottom: rem(20);
-      &:before {
+      &:after {
         transform: rotate((225deg));
       }
     }
@@ -35,7 +34,7 @@
     overflow: hidden;
     transition: $trFast;
     &_active {
-      max-height: 1000px;
+      max-height: rem(1000);
     }
     label {
       line-height: 1;
@@ -51,13 +50,16 @@
   }
   &__custom-checkbox {
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    min-width: 20px;
-    min-height: 20px;
+    width: rem(20);
+    height: rem(20);
+    min-width: rem(20);
+    min-height: rem(20);
     border: $border;
-    border-radius: 4px;
+    border-radius: rem(4);
     margin-right: rem(10);
+    &:focus {
+      border: $borderHover;
+    }
   }
   &__text {
     font-size: rem(14);
