--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,7 +1,7 @@
 .header {
   $self: &;
   background-color: $white;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  box-shadow: 0 rem(10) rem(20) rgba(31, 32, 65, 0.05);
   position: relative;
   &__content {
     display: flex;
@@ -91,7 +91,7 @@
         display: inline-block;
         min-width: 50%;
         border: none;
-        border-top: 1px solid rgba(31, 32, 65, 0.1);
+        border-top: rem(1) solid rgba(31, 32, 65, 0.1);
         padding: rem(20) rem(10);
       }
     }
@@ -108,11 +108,11 @@
       &:after {
         content: '';
         display: inline-block;
-        min-width: 8px;
-        min-height: 8px;
-        max-width: 8px;
-        max-height: 8px;
-        border: 2px solid $ds50;
+        min-width: rem(8);
+        min-height: rem(8);
+        max-width: rem(8);
+        max-height: rem(8);
+        border: rem(2) solid $ds50;
         border-top: none;
         border-left: none;
         transform: rotate(45deg);
@@ -137,17 +137,17 @@
     }
   }
   &__cabinet {
-    font-size: 14px;
-    line-height: 17px;
+    font-size: rem(14);
+    line-height: rem(17);
     color: $ds50;
-    border-left: 1px solid rgba(31, 32, 65, 0.1);
+    border-left: rem(1) solid rgba(31, 32, 65, 0.1);
     padding: rem(10) 0 rem(10) rem(20);
   }
   &__burger {
     cursor: pointer;
     display: none;
-    width: 30px;
-    height: 3px;
+    width: rem(30);
+    height: rem(3);
     background-color: $purple;
     position: relative;
     z-index: 10;
@@ -156,8 +156,8 @@
     &:after {
       content: '';
       display: block;
-      width: 30px;
-      height: 3px;
+      width: rem(30);
+      height: rem(3);
       background-color: $purple;
       position: absolute;
       top: rem(-9);
@@ -167,31 +167,31 @@
     &:before {
       content: '';
       display: block;
-      width: 30px;
-      height: 3px;
+      width: rem(30);
+      height: rem(3);
       background-color: $purple;
       position: absolute;
-      top: 8px;
+      top: rem(8);
       z-index: 10;
       border-radius: rem(50);
     }
     &_active {
-      height: 30px;
+      height: rem(30);
       background-color: $white;
-      border: 2px solid $purple;
+      border: rem(2) solid $purple;
       border-radius: 50%;
       transition: $trFast;
       &:after {
         transform: rotate(45deg);
-        top: calc(50% - 1px);
-        width: 20px;
-        left: calc(50% - 10px);
+        top: calc(50% -0.056rem);
+        width: rem(20);
+        left: calc(50% - 0.556rem);
       }
       &:before {
         transform: rotate(-45deg);
-        top: calc(50% - 1px);
-        left: calc(50% - 10px);
-        width: 20px;
+        top: calc(50% - 0.056rem);
+        left: calc(50% - 0.556rem);
+        width: rem(20);
       }
     }
     @media (max-width: $smDesktopWidth) {
