--- a/src/blocks/like-button/like-button.scss
+++ b/src/blocks/like-button/like-button.scss
@@ -2,41 +2,46 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 38px;
-  height: 18px;
-  min-width: 38px;
-  min-height: 18px;
+  width: rem(38);
+  height: rem(18);
+  min-width: rem(38);
+  min-height: rem(18);
   @include Mont;
   cursor: pointer;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: rem(10);
   position: relative;
   transition: $trFast;
   user-select: none;
+  &:focus {
+    &:after {
+      background-color: $ds75;
+    }
+  }
   &:after {
     content: '';
     position: absolute;
-    left: -1px;
+    left: rem(-1);
     display: block;
-    min-width: 40px;
-    min-height: 20px;
+    min-width: rem(40);
+    min-height: rem(20);
     z-index: -1;
-    border-radius: 12px;
+    border-radius: rem(12);
     background-color: $ds25;
     transition: $trFast;
   }
   &__like {
-    width: 10px;
-    height: 10px;
+    width: rem(10);
+    height: rem(10);
     position: absolute;
-    left: 4px;
+    left: rem(4);
     transition: $trFast;
   }
   &__like-favorite {
-    width: 10px;
-    height: 10px;
+    width: rem(10);
+    height: rem(10);
     position: absolute;
-    left: 4px;
+    left: rem(4);
     transition: $trFast;
     opacity: 0;
   }
@@ -44,7 +49,7 @@
     font-size: rem(12);
     color: $ds25;
     position: absolute;
-    right: 9px;
+    right: rem(9);
     transition: $trFast;
   }
   &_active {
