--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -1,18 +1,18 @@
 .simple-pagination {
   padding: 0;
-  margin-bottom: 10px;
+  margin-bottom: rem(10);
 }
 .pagination.simple-pagination {
   padding: 0;
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: rem(10);
 }
 .pagination__arrow-forward {
-  width: 18px;
-  height: 18px;
+  width: rem(18);
+  height: rem(18);
 }
 .pagination-wrap__text {
-  max-width: 320px;
+  max-width: rem(320);
   margin: 0 auto;
   font-size: rem(14);
   color: $ds75;
@@ -27,9 +27,9 @@ ul.simple-pagination {
 
 .simple-pagination {
   overflow: hidden;
-  padding: 0 5px 5px 0;
+  padding: 0 rem(5) rem(5) 0;
   margin: 0;
-  max-width: 320px;
+  max-width: rem(320);
   user-select: none;
   ul {
     list-style: none;
