--- a/src/blocks/review/review.scss
+++ b/src/blocks/review/review.scss
@@ -1,5 +1,5 @@
 .review {
-  max-width: 710px;
+  max-width: rem(710);
   &:not(:last-child) {
     margin-bottom: rem(20);
   }
@@ -18,8 +18,8 @@
     color: $ds75;
   }
   &__avatar {
-    max-width: 48px;
-    max-height: 48px;
+    max-width: rem(48);
+    max-height: rem(48);
     border-radius: 50%;
     margin-right: rem(10);
   }
@@ -28,8 +28,8 @@
   }
   &__like {
     margin-top: rem(5);
-    margin-right: 15px;
-    margin-left: 5px;
+    margin-right: rem(15);
+    margin-left: rem(5);
   }
   &__text {
     font-size: rem(14);
