--- a/src/blocks/rich-list/rich-list.scss
+++ b/src/blocks/rich-list/rich-list.scss
@@ -1,6 +1,6 @@
 .rich-list {
   display: block;
-  max-width: 266px;
+  max-width: rem(266);
   user-select: none;
   cursor: pointer;
   &__li {
@@ -15,11 +15,14 @@
   }
   &__custom-checkbox {
     display: inline-block;
-    min-width: 20px;
-    min-height: 20px;
+    min-width: rem(20);
+    min-height: rem(20);
     border: $border;
-    border-radius: 4px;
+    border-radius: rem(4);
     margin-right: rem(10);
+    &:focus {
+      border: $borderHover;
+    }
   }
   &__head {
     @include MontBold;
