--- a/src/blocks/toggle-buttons/toggle-buttons.scss
+++ b/src/blocks/toggle-buttons/toggle-buttons.scss
@@ -13,7 +13,7 @@
     align-items: center;
     width: 100%;
     cursor: pointer;
-    margin-bottom: 16.6px;
+    margin-bottom: rem(16.6);
     &_active {
       svg {
         transform: rotate(180deg);
@@ -40,7 +40,7 @@
       &:after {
         background: $purpleGr;
         left: none;
-        left: calc(100% - 12px - 3px);
+        left: calc(100% - 0.833rem);
       }
     }
     &:checked ~ #{$self}__subtitle {
@@ -52,20 +52,23 @@
     position: relative;
     justify-content: flex-start;
     align-items: center;
-    min-height: 20px;
-    min-width: 40px;
-    border-radius: 10px;
-    border: 1px solid $ds25;
+    min-height: rem(20);
+    min-width: rem(40);
+    border-radius: rem(10);
+    border: rem(1) solid $ds25;
     overflow: hidden;
-    margin-right: 10px;
+    margin-right: rem(10);
     transition: $trFast;
+    &:focus {
+      border: $borderHover;
+    }
     &:after {
       content: '';
       display: block;
       position: absolute;
-      left: 3px;
-      width: 12px;
-      height: 12px;
+      left: rem(3);
+      width: rem(12);
+      height: rem(12);
       border-radius: 50%;
       background: $ds25;
       transition: $trFast;
